Bug 426358 - Okular_Nightly_win64 not working from 22 jul
Summary: Okular_Nightly_win64 not working from 22 jul
Status: CLOSED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.11.0
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-10 09:23 UTC by dapa1
Modified: 2020-09-11 05:02 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dapa1 2020-09-10 09:23:09 UTC
SUMMARY
Can someone fix Windows nightlies?
On some enterprise machines Microsoft Store is disabled, therefore only option was https://binary-factory.kde.org/job/Okular_Nightly_win64/
Unfortunately the latest succesful build is #4​59 (Jul 22, 2020 9:34 PM).
Thanks! 


SOFTWARE/OS VERSIONS
Windows: Windows 10 Enterprise (1909, 64-bit)
Comment 1 Albert Astals Cid 2020-09-10 18:11:52 UTC
Windows people, any idea of what's wrong?

Is it failing because of?

error: patch failed: shell/main.cpp:37
23:34:31  error: shell/main.cpp: patch does not apply

?
Comment 2 Ben Cooksley 2020-09-10 18:15:08 UTC
It is likely the Breeze patch at https://invent.kde.org/packaging/craft-blueprints-kde/-/tree/master/kde/applications/okular needs to be updated to correct this.
Comment 3 Jazeix Johnny 2020-09-10 18:16:56 UTC
I don't think the build failing is due to the outdated patch.

It fails due to link errors:
21:35:48  annots.cpp.obj : error LNK2019: unresolved external symbol "public: __cdecl Okular::Annotation::Revision::Revision(void)" (??0Revision@Annotation@Okular@@QEAA@XZ) referenced in function "class Okular::Annotation * __cdecl createAnnotationFromPopplerAnnotation(class Poppler::Annotation *,class Poppler::Page const &,bool *)" (?createAnnotationFromPopplerAnnotation@@YAPEAVAnnotation@Okular@@PEAV1Poppler@@AEBVPage@3@PEA_N@Z)
...
Comment 4 Christoph Cullmann 2020-09-10 18:52:29 UTC
Git commit 25984bb2bba893c903176d47ce4698f90f1b9f88 by Christoph Cullmann.
Committed on 10/09/2020 at 18:51.
Pushed by cullmann into branch 'master'.

add missing export to class

M  +1    -1    core/annotations.h

https://invent.kde.org/graphics/okular/commit/25984bb2bba893c903176d47ce4698f90f1b9f88
Comment 5 Christoph Cullmann 2020-09-10 18:53:05 UTC
I think the missing export was the issue.

The breeze patch can be removed as soon as no older versions are supported in craft, that it fails is no issue, it just fails as master has the patch already.
Comment 6 Christoph Cullmann 2020-09-10 19:06:06 UTC
I scheduled a new build

https://binary-factory.kde.org/job/Okular_Nightly_win64/509/

=> did succeed
Comment 7 dapa1 2020-09-11 05:02:40 UTC
Thank you! It works fine!
And the "Quick Annotations" -> "Freehand Line" works fine too :-)