add missing export to class

BUG: 426358